Corrected CSS bug, present only on smaller screen sizes.

--- a/src/components/about-me/about-me.css
+++ b/src/components/about-me/about-me.css
@@ -1,5 +1,6 @@
 .aboutMe {
-  height: 90vh;
+  height: 100%;
+  min-height: 90vh;
   background-color: #0077b5; /*0EB0D7*/ /*#4457C0*/
   text-align: center;
   padding: 10vh 10vw;
